<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CollegeUser</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_about">About</string>
    <string name="fragment_gallery">Gallery</string>
    <string name="fragment_faculty">Notifications</string>
    <string name="fragment_notice">Profile</string>


    <string name="black" tools:ignore="ReferenceType">@font/nunito_black</string>
    <string name="bold" tools:ignore="ReferenceType">@font/nunito_bold</string>
    <string name="light" tools:ignore="ReferenceType">@font/nunito_light</string>
    <string name="regular" tools:ignore="ReferenceType">@font/nunito_regular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="contact_us"> > <b>Service options:</b> Online classes · On-site services not available\n\n
> <b>Address:</b> Ward No 42, Lane No. 1, Gulabara, Chhindwara, Madhya Pradesh 480001\n\n
> <b>Hours:</b>12hrs\n\n
> <b>Closed - Opens</b> 9AM Mon\n\n
> A user suggested these hours\n
 Mon-Fri 9am–6pm\n
 Sat 9am–2pm\n
 Sun Closed\n
Phone No. : <b>62609 00065</b>\n</string>

    <string name="about_college">As somebody says that ” There is a systematic way to have any success”. Our education centre was established on 16th day of July in 1998. with educational area about 5.5 Acre. Now we have our institute at 2800 sq. ft. area with two largest computer labs in whole district. Many poor student but talented are benefited by our institute absolutely free of cost. and we are the man power provider in computer field for the district. Our institute also conduct the policies run by government at rural and urban places. Our Institute is liable for provide better education for the people of district, state or nation. Our education institute want overall development of the student, that’s why we provide seminar’s at different-different topics and extra curiculam activities for the student.</string>
    <string name="about_college2"> Our Institute is liable for provide better education for the people of district, state or nation. Our education institute want overall development of the student, that’s why we provide seminar’s at different-different topics and extra curiculam activities for the student.</string>

    <string-array name="theme">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="developer">
        "Meet Dipanshu Dhole, our skilled Android developer who has been creating high-quality apps . Dipanshu is also proficient in Git, making collaboration with other developers seamless and efficient.

If you're looking for a talented Android developer to bring your ideas to life, Dipanshu is the person for you. Contact him today to discuss your project requirements."
    </string>
</resources>