<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/yellow"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@string/bold"
                android:text="Branch"
                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/Sony_lal"
                android:textSize="18dp"
                android:id="@+id/branch_title"/>


        </LinearLayout>

        <TextView
            android:id="@+id/branch_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/about_college2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>