<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:padding="10dp"
            android:text="@string/about_college2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_label_important_24"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Red Environment"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@font/nunito_black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Sony_lal"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@string/bold"
                android:text="Courses"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />


            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/text_margin"
                android:foregroundGravity="center"
                android:clipToPadding="false"
                android:layout_margin="@dimen/text_size01"
                android:overScrollMode="never"
                android:id="@+id/viewPager"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:fontFamily="@string/bold"
                android:gravity="center"
                android:text="Contact Us"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/title_size"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:text="@string/contact_us"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size1"
                android:fontFamily="@string/light"
                android:textColor="@color/textColor"
                android:padding="10dp"/>

        </LinearLayout>

</LinearLayout>

</androidx.core.widget.NestedScrollView>